// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Default button component renders correctly 1`] = `
<Button>
  <button
    className="btn btn--document"
  >
    Facbook
  </button>
</Button>
`;

exports[`Button component Primary button component renders correctly 1`] = `
<Button
  variation="primary"
>
  <button
    className="btn btn--primary"
  >
    Facbook
  </button>
</Button>
`;

exports[`Button component Primary button component renders correctly 2`] = `
<Button
  variation="secondary"
>
  <button
    className="btn btn--secondary"
  >
    Facbook
  </button>
</Button>
`;
